--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:type" content="website">
 <meta property="og:description" content="hello!">
 
-<link rel="icon" href="image/color_hi.png">
+<link rel="icon" href="image/julia_chen.jpg">
 	
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
