--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="image/julia_chen.jpg">
 	
 	
-<link href="css/meet_our_team_page.css" rel="stylesheet" type="text/css">
+<!-- <link href="css/meet_our_team_page.css" rel="stylesheet" type="text/css"> -->
 
 
 
