--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -59,4 +59,16 @@
 	
 	
 </body>
+</html>
+ -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>你好，GitHub</title>
+  </head>
+  <body>
+    <h1>覺得厲害</h1>
+  </body>
 </html>
