--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="image/julia_chen.jpg">
 	
 	
-<!-- <link href="css/meet_our_team_page.css" rel="stylesheet" type="text/css"> -->
+<link href="css/meet_our_team_page.css" rel="stylesheet" type="text/css">
 
 
 
@@ -18,9 +18,9 @@
 	
 	<div class="self_introduction">
 
-<!-- 		<div class="self_pic_holder">
+ 		<div class="self_pic_holder">
 			<img src="image/julia_chen.jpg" class="big_self_pic lazyload">
-		</div> -->
+		</div>
 
 		<div class="short_info">
 			<div class="name_and_info">
@@ -49,7 +49,7 @@
 
 		<marquee direction="down" width="calc(90% - 10)" height="300" behavior="alternate" style="border:solid black 5px; margin: 10px 5% 50px;">
 		  <marquee behavior="alternate">
-<!-- 		    <img src="image/julia_chen.jpg" style="width: 150px;"> -->
+ 		    <img src="image/julia_chen.jpg" style="width: 150px;"> -->
 		  </marquee>
 		</marquee>
 		
