--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 		<marquee direction="down" width="calc(90% - 10)" height="300" behavior="alternate" style="border:solid black 5px; margin: 10px 5% 50px;">
 		  <marquee behavior="alternate">
- 		    <img src="image/julia_chen.jpg" style="width: 150px;"> -->
+ 		    <img src="image/julia_chen.jpg" style="width: 150px;">
 		  </marquee>
 		</marquee>
 		
