--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
 <title>Julia Chen</title>
 
+<meta name="viewport" content="width=device-width, initial-scale=1" >
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" >
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-<link rel="icon" href="image/julia_chen.jpg">
+<meta property="og:title" content="Julia Chen">
+<meta property="og:type" content="website">
+<meta property="og:description" content="hello!">
+
+<link rel="icon" href="image/color_hi.png">
+	
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
+<!-- 
+<script src="static/aos.js"></script>
+<link href="css/aos.css" rel="stylesheet" type="text/css"> -->
 	
 	
 <link href="css/meet_our_team_page.css" rel="stylesheet" type="text/css">
+<!-- <script src="static/second_page.js"></script> -->
 
+<!--<script src="../static/animate.js"></script>-->
 
 
 </head>
@@ -18,8 +37,8 @@
 	
 	<div class="self_introduction">
 
- 		<div class="self_pic_holder">
-			<img src="image/julia_chen.jpg" class="big_self_pic lazyload">
+		<div class="self_pic_holder">
+			<img data-src="image/julia_chen.jpg" class="big_self_pic lazyload">
 		</div>
 
 		<div class="short_info">
@@ -49,26 +68,18 @@
 
 		<marquee direction="down" width="calc(90% - 10)" height="300" behavior="alternate" style="border:solid black 5px; margin: 10px 5% 50px;">
 		  <marquee behavior="alternate">
- 		    <img src="image/julia_chen.jpg" style="width: 150px;">
+		    <img src="image/color_hi.png" style="width: 150px;">
 		  </marquee>
 		</marquee>
 		
 
 	</div>
 
+<script>
+	$("img.lazyload").lazyload();
+	
+</script>
 	
 	
 </body>
-</html>
- -->
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>你好，GitHub</title>
-  </head>
-  <body>
-    <h1>覺得厲害</h1>
-  </body>
 </html>
